Fix the alignment for post meta label and content
Use `first baseline` instead of trying to monkey with line-heights to
keep things lining up perfectly. CSS GRID IS THE BEST.

--- a/site/_includes/styles/components/post-meta.scss
+++ b/site/_includes/styles/components/post-meta.scss
@@ -29,10 +29,9 @@
 
 .section-label {
    grid-column: 1 / 2;
-   align-self: flex-start;
+   align-self: first baseline;
    font-size: ms(-2);
    display: block;
-   line-height: 1em * (1em / ms(-2));
    font-weight: bold;
    color: var(--meta-label-color);
    text-transform: uppercase;
@@ -41,8 +40,7 @@
 
 .section-content {
    display: block;
-   line-height: 1;
-   align-self: flex-start;
+   align-self: first baseline;
    grid-column: 2 / 3;
 }
 
